--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "dependencies": {
     "@rails/webpacker": "^3.0.1",
     "babel-preset-react": "^6.24.1",
+    "hypernova": "^2.1.3",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-router": "^3.0.5"
   },
   "devDependencies": {
     "enzyme": "^2.9.1",
