--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "babel-preset-react": "^6.24.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-bootstrap": "^0.31.3",
+    "react-dom": "^15.6.1",
+    "webpacker-react": "^0.3.0"
   },
   "devDependencies": {
     "enzyme": "^2.9.1",
