--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^15.6.1",
+    "react-on-rails": "^9.0.2",
     "webpacker-react": "^0.3.0"
   },
   "devDependencies": {
