--- a/package.json
+++ b/package.json
@@ -10,15 +10,12 @@
     "hypernova": "^2.1.3",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
-<<<<<<< HEAD
     "react-dom": "^15.6.1",
-    "react-router": "^3.0.5"
-=======
+    "react-router": "^3.0.5",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^15.6.1",
     "react-on-rails": "^9.0.2",
     "webpacker-react": "^0.3.0"
->>>>>>> react_components
   },
   "devDependencies": {
     "enzyme": "^2.9.1",
