--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   },
   "dependencies": {
     "@rails/webpacker": "^3.0.1",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "hypernova": "^2.1.3",
+    "jquery-ujs": "^1.2.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-router": "^3.0.5",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^15.6.1",
     "react-on-rails": "^9.0.2",
+    "react-router": "^3.0.5",
     "webpacker-react": "^0.3.0"
   },
   "devDependencies": {
