--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^15.6.1",
     "react-on-rails": "^9.0.2",
     "react-router": "^3.0.5",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "webpacker-react": "^0.3.0"
   },
   "devDependencies": {
