--- a/package.json
+++ b/package.json
@@ -1,15 +1,9 @@
 {
   "name": "on-blast",
-  "version": "0.1.0",
-  "engines": {
-    "node": "7.8.0",
-    "npm": "4.4.4",
-    "yarn": "0.22.0"
-  },
+  "engines" : { "node" : ">=4" },
   "private": true,
   "scripts": {
-    "start": "./bin/webpack-dev-server",
-    "postinstall": "cd client && npm install"
+    "start": "./bin/webpack-dev-server"
   },
   "dependencies": {
     "@rails/webpacker": "^3.0.1",
