--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "on-blast",
-  "engines" : { "node" : ">=4" },
+  "engines" : {
+    "node" : ">=4",
+    "yarn" : ">=0.25" 
+  },
   "private": true,
   "scripts": {
     "start": "./bin/webpack-dev-server"
